[gd_scene load_steps=5 format=2]

[ext_resource path="res://Objects/GUI/OptionsMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://main_theme.tres" type="Theme" id=2]
[ext_resource path="res://Objects/Scripts/PauseMenu.gd" type="Script" id=3]
[ext_resource path="res://Objects/Scripts/OptionsMenu.gd" type="Script" id=4]

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="Buttons" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons"]
margin_right = 83.0
margin_bottom = 14.0
text = "PAUSED"

[node name="Continue" type="Button" parent="Buttons"]
margin_top = 18.0
margin_right = 83.0
margin_bottom = 38.0
text = "Continue"

[node name="Options" type="Button" parent="Buttons"]
margin_top = 42.0
margin_right = 83.0
margin_bottom = 62.0
text = "Options"

[node name="Main" type="Button" parent="Buttons"]
margin_top = 66.0
margin_right = 83.0
margin_bottom = 86.0
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Buttons"]
margin_top = 90.0
margin_right = 83.0
margin_bottom = 110.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsMenu" type="Panel" parent="." instance=ExtResource( 1 )]
visible = false
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.8
anchor_bottom = 0.8
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Buttons/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Buttons/Main" to="." method="_on_Main_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_Quit_pressed"]
